force-app/main/default/objects/Discount__mdt/Discount__mdt.object-meta.xml
<CustomObject>
    <label>Discount</label>
    <pluralLabel>Discount</pluralLabel>
</CustomObject>