force-app/main/default/objects/Discount__mdt/fields/Class_to_Instanciete__c.field-meta.xml
<CustomField>
    <fullName>Class_to_Instanciete__c</fullName>
    <label>Class to Instanciete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>