force-app/main/default/objects/Discount__mdt/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>